unpackaged/main/default/objects/Support_Contact_Information__c/Support_Contact_Information__c.object-meta.xml
<CustomObject>
    <description>Used to track which Contacts are the support contact for which products.</description>
    <label>Support Contact Information</label>
    <nameField>
        <displayFormat>SC-{00000000}</displayFormat>
        <label>Support Contact Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Contacts Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>