unpackaged/main/default/objects/Support_Contact_Information__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Support Contacts Information</relationshipLabel>
    <relationshipName>Support_Contacts_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>