unpackaged/main/default/objects/Support_Contact_Information__c/fields/HiddenUnique__c.field-meta.xml
<CustomField>
    <fullName>HiddenUnique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>HiddenUnique</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>