unpackaged/main/default/objects/Support_Contact_Information__c/fields/Product_s__c.field-meta.xml
<CustomField>
    <fullName>Product_s__c</fullName>
    <label>Product/s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Corporate Performance Management</fullName>
            </value>
            <value>
                <fullName>Customer Relationship Management</fullName>
            </value>
            <value>
                <fullName>Enterprise Cash Receipting</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Management</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Human Resources and Payroll</fullName>
            </value>
            <value>
                <fullName>Property And Rating</fullName>
            </value>
            <value>
                <fullName>Student Management</fullName>
            </value>
            <value>
                <fullName>Supply Chain Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>